chore: add a schematic to automatically add imports in midgard module

--- a/projects/midgard/src/lib/components/nav-bar/nav-bar.component.html
+++ b/projects/midgard/src/lib/components/nav-bar/nav-bar.component.html
@@ -1,16 +1,14 @@
-<ul>
-  <li>
+<div class="nav-bar">
+  <div class="nav-bar__elem">
     <a [routerLink]="['/workflow-level1']">
       <i class="fas fa-home"></i>
       Worflow Level1
     </a>
+  </div>
+  <div class="nav-bar__elem">
     <a [routerLink]="['/workflow-level2']">
       <i class="fas fa-store"></i>
       Worflow Level 2
     </a>
-    <a [routerLink]="['/user']">
-      <i class="fas fa-chart-bar"></i>
-      User
-    </a>
-  </li>
-</ul>
+  </div>
+</div>
