--- a/projects/midgard/src/lib/midgard.component.html
+++ b/projects/midgard/src/lib/midgard.component.html
@@ -1,5 +1,6 @@
-<p>
-  midgard best app ever!
-</p>
-<mg-nav-bar></mg-nav-bar>
-<router-outlet></router-outlet>
+<mg-top-bar></mg-top-bar>
+<div class="midgard-wrapper">
+  <mg-nav-bar></mg-nav-bar>
+  <router-outlet></router-outlet>
+</div>
+
