--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,6 +2,9 @@
 @import "config/mixins/_mixins";
 @import "config/variables";
 
+@import '../../projects/midgard-angular/node_modules/bootstrap/scss/functions', '../../projects/midgard-angular/node_modules/bootstrap/scss/variables';
+@import "../../projects/midgard-angular/node_modules/bootstrap/scss/mixins";
+
 body {
   margin: 0;
 }
