fix some styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,7 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
 .form-control {
   margin-right: 20px !important;
 }
+
+.mat-tab-header {
+  margin-bottom: 30px;
+}
