--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,9 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
 .mat-tab-header {
   margin-bottom: 30px;
 }
+
+.card {
+  margin: 1rem 0;
+}
+
+
