revert walhall sample app before installing module

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ $main-color: #0c5593;
 $danger-color: #DD0000;
 
 html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; background-color: $background-secondary-color;}
+body { margin: 0; font-family: OpenSans, sans-serif; background-color: $background-secondary-color;}
 
 .main-button {
   background-color: $main-color !important;
