--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,8 +2,8 @@
 @import "config/mixins/_mixins";
 @import "config/variables";
 
-@import '../../projects/midgard-angular/node_modules/bootstrap/scss/functions', '../../projects/midgard-angular/node_modules/bootstrap/scss/variables';
-@import "../../projects/midgard-angular/node_modules/bootstrap/scss/mixins";
+//@import '../../projects/midgard-angular/node_modules/bootstrap/scss/functions', '../../projects/midgard-angular/node_modules/bootstrap/scss/variables';
+//@import "../../projects/midgard-angular/node_modules/bootstrap/scss/mixins";
 
 body {
   margin: 0;
