add test coverage + remove bootstrap and fix styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "styles/global";
-@import "styles/theme";
+@import "styles/colors";
 @import "../projects/midgard-angular/node_modules/freyja-ui/theming";
 
 $main-color: #1b51a0;
@@ -10,7 +10,7 @@ html, body { height: 100%; }
 body { margin: 0; font-family: OpenSans, sans-serif; background-color: $background-secondary-color;}
 
 .main-button {
-  background-color: $main-color !important;
+  background-color: $primary-color !important;
   color: white;
   &:disabled {
     color: white !important;
@@ -18,7 +18,7 @@ body { margin: 0; font-family: OpenSans, sans-serif; background-color: $backgrou
 }
 
 .cancel-button {
-  background-color: $danger-color !important;
+  background-color: $primary-color !important;
   color: white;
   &:disabled {
     opacity: 0.5;
@@ -43,7 +43,7 @@ body { margin: 0; font-family: OpenSans, sans-serif; background-color: $backgrou
   width: 100% !important;
 }
 $theme-colors: (
-  'color-primary': $main-color,
+  'color-primary': $primary-color,
 );
 
 $haf: "&:hover, &:active, &:focus";
