--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,3 +3,4 @@ $text-primary-color: #191919;
 $text-secondary-color: #1b51a0;
 $background-primary-color: #d5dde6;
 $background-secondary-color: #f2f5f7;
+$danger-color: #DD0000;
