--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,7 +1,6 @@
 @import "config/functions/_functions";
 @import "config/mixins/_mixins";
-@import "config/variables";
-
+@import "colors";
 
 body {
   margin: 0;
