--- a/src/midgard/components/nav-bar/nav-bar.component.html
+++ b/src/midgard/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <div class="nav-bar" id="exitPointComponent" [ngClass]="{'hide-menu': hideMenu}">
   <div class="nav-bar__container" [ngClass]="{'nav-bar__container--hidden': hideMenu}">
     <div id="navbar" class="nav-bar__elements">
-    </div>
+      <mg-navbar-elem label="Dashboards" route="dashboards" icon="dashboard"></mg-navbar-elem>  <mg-navbar-elem label="Products" route="products" icon="view_headline"></mg-navbar-elem>  <mg-navbar-elem label="Contacts" route="contacts" icon="supervisor_account"></mg-navbar-elem>  <mg-navbar-elem label="Documents" route="documents" icon="book"></mg-navbar-elem>  <mg-navbar-elem label="Forms" route="forms" icon="assignment"></mg-navbar-elem></div>
     <a class="nav-bar__user" (click)="goToAdmin()" routerLinkActive="nav-bar__user--active">
       <i class="material-icons nav-bar__user__icon">person</i>
       <span class="nav-bar__user__name">
