--- a/src/midgard/components/nav-bar/nav-bar.component.scss
+++ b/src/midgard/components/nav-bar/nav-bar.component.scss
@@ -36,18 +36,25 @@
     position: relative;
     display: flex;
     flex-grow: 1;
-    margin-bottom: 30px;
+    margin-bottom: rem-calc(30);
     align-items: center;
     color: #191919;
     text-decoration: none;
     &__icon {
       background-color: $background-secondary-color;
-      margin-right: 5px;
-      padding: 5px;
+      padding: rem-calc(5);
+      margin: rem-calc(5);
       border-radius: 50%;
     }
+    &__container {
+      display: flex;
+      align-items: center;
+    }
     &--active {
-      color: $text-secondary-color;
+      .nav-bar__user__container {
+        background-color: $background-secondary-color;
+        color: $text-secondary-color;
+      }
     }
     &:hover {
       color: $text-secondary-color;
