--- a/src/midgard/modules/form/form.component.scss
+++ b/src/midgard/modules/form/form.component.scss
@@ -1,27 +1,25 @@
 @import "../../../../src/styles";
 
-.crud-details {
+.form {
   &__card {
     display: flex;
-    border: 1px solid lightgrey;
     margin: rem-calc(30 0);
-    max-width: rem-calc(625);
     &__content{
       width: 100%;
     }
   }
-  &__form{
+  &__container{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    &__field {
-      flex: 47%;
-      margin-bottom: rem-calc(15);
-      margin-right: rem-calc(15);
-    }
-    &__submit {
-      width: 100%
-    }
+  }
+  &__field {
+    flex: 47%;
+    margin-bottom: rem-calc(15);
+    margin-right: rem-calc(15);
+  }
+  &__submit {
+    width: 100%
   }
 }
 
