--- a/src/midgard/components/nav-bar/nav-bar.component.html
+++ b/src/midgard/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,6 @@
 <div class="nav-bar" id="exitPointComponent" [ngClass]="{'hide-menu': hideMenu}">
   <div class="nav-bar__container" [ngClass]="{'nav-bar__container--hidden': hideMenu}">
-    <div id="navbar" class="nav-bar__elements">
-      <mg-navbar-elem label="Dashboards" route="dashboards" icon="dashboard"></mg-navbar-elem>  <mg-navbar-elem label="Products" route="products" icon="view_headline"></mg-navbar-elem>  <mg-navbar-elem label="Documents" route="documents" icon="book"></mg-navbar-elem></div>
+    <div id="navbar" class="nav-bar__elements">  <mg-navbar-elem label="Dashboards" route="dashboards" icon="dashboard"></mg-navbar-elem>  <mg-navbar-elem label="Products" route="products" icon="view_headline"></mg-navbar-elem></div>
     <a class="nav-bar__user" (click)="setTopBarOptions()" routerLink="/user" routerLinkActive="nav-bar__user--active">
       <div class="nav-bar__user__container p2">
         <i class="material-icons nav-bar__user__icon">person</i>
