--- a/src/midgard/pages/user/user.component.html
+++ b/src/midgard/pages/user/user.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="selectedTab === 'user-profile'">
   <mg-form
-    #crud
+    #crudForm
     [selector]="selectorProfile"
     [loadAction]="'LOAD_AUTHUSER'"
     [updateAction]="'UPDATE_AUTHUSER'"
