--- a/src/midgard/modules/form/form.component.scss
+++ b/src/midgard/modules/form/form.component.scss
@@ -13,13 +13,12 @@
     width: 100%;
   }
   &__field {
-    width: calc(50% - 30px);
+    width: calc(50% - 15px);
     margin-bottom: rem-calc(15);
-    margin: rem-calc(0 15 15 15);
+    margin-right: rem-calc(15);
   }
   &__submit {
     width: 100%;
-    margin-left: rem-calc(15);
   }
 }
 
