Fix logo size on FF

--- a/src/midgard/pages/login/login.component.scss
+++ b/src/midgard/pages/login/login.component.scss
@@ -11,8 +11,8 @@
   &__card {
     &__logo {
       display: block;
-      width: 100%;
-      margin: rem-calc(30 0);
+      width: rem-calc(80);
+      margin: rem-calc(30 auto);
     }
     &__content {
       width: 100%;
