fixes in crud model

--- a/src/midgard/pages/user/user-list/user-list.component.html
+++ b/src/midgard/pages/user/user-list/user-list.component.html
@@ -3,7 +3,8 @@
   [defaultLayout]="'data-table'"
   [title]="'Users'"
   [tableOptions]="tableOptions"
-  [selector]="selector"
+  [loadedSelector]="loadedSelector"
+  [dataSelector]="dataSelector"
   [deleteAction]="'DELETE_COREUSER'"
   [addButtonText]="'Invite User'"
   [deleteMessage]="'The user has been deactivated'"
