--- a/src/midgard/pages/workflow-level2/list/workflow-level2.component.html
+++ b/src/midgard/pages/workflow-level2/list/workflow-level2.component.html
@@ -3,7 +3,7 @@
   [loadAction]="'LOAD_ALL_WORKFLOWLEVEL2'"
   [cardItemOptions]="cardItemOptions"
   [title]="'Projects'"
-  [selector]="selector"
+  [dataSelector]="dataSelector"
   [deleteAction]="'DELETE_WORKFLOWLEVEL2'"
   [deleteMessage]="'The project has been deleted'"
   [detailsRoute]="'/workflow-level2/details/'"
