--- a/src/midgard/pages/user/user.component.html
+++ b/src/midgard/pages/user/user.component.html
@@ -3,6 +3,7 @@
   <div class="form__container">
     <mg-form
       #crudForm
+      [itemId]="'myuser'"
       [selector]="selectorProfile"
       [loadAction]="'LOAD_AUTHUSER'"
       [updateAction]="'UPDATE_AUTHUSER'"
