--- a/src/midgard/modules/form/form.component.scss
+++ b/src/midgard/modules/form/form.component.scss
@@ -13,12 +13,10 @@
     width: 100%;
   }
   &__field {
-    width: calc(50% - 15px);
+    flex:1;
+    min-width: rem-calc(140);
     margin-bottom: rem-calc(15);
     margin-right: rem-calc(15);
-  }
-  &__submit {
-    width: 100%;
   }
 }
 
