--- a/src/midgard/modules/crud/crud.component.html
+++ b/src/midgard/modules/crud/crud.component.html
@@ -13,16 +13,41 @@
   <div class="list__content" [ngClass]= "'list__content--' + view ">
     <ng-container *ngIf="(dataLoaded | async) && rows">
       <ng-container *ngIf="cardItemOptions">
-        <cdk-virtual-scroll-viewport  style="height: 500px" itemSize="200" >
-          <mg-card-item *cdkVirtualFor="let row of rows"
-                        class="list__content__card"
-                        [layout]="view"
-                        [item]="row"
-                        [options]="cardItemOptions"
-                        (elementEdited)="onCardItemEdited($event, row)"
-                        (actionClicked)="onCardItemActionClicked($event, row)"
-          ></mg-card-item>
-        </cdk-virtual-scroll-viewport>
+        <!-- differnet virtual scrolls for different views-->
+        <ng-container *ngIf="view === 'list'">
+          <cdk-virtual-scroll-viewport  class="list__content__viewport" itemSize="200" >
+            <mg-card-item *cdkVirtualFor="let row of rows"
+                          class="list__content__card"
+                          [layout]="view"
+                          [item]="row"
+                          [options]="cardItemOptions"
+                          (elementEdited)="onCardItemEdited($event, row)"
+                          (actionClicked)="onCardItemActionClicked($event, row)"
+            ></mg-card-item>
+          </cdk-virtual-scroll-viewport>
+        </ng-container>
+        <ng-container *ngIf="view === 'table'">
+          <cdk-virtual-scroll-viewport  class="list__content__viewport" itemSize="80" >
+            <mg-card-item *cdkVirtualFor="let row of rows"
+                          class="list__content__card"
+                          [layout]="view"
+                          [item]="row"
+                          [options]="cardItemOptions"
+                          (elementEdited)="onCardItemEdited($event, row)"
+                          (actionClicked)="onCardItemActionClicked($event, row)"
+            ></mg-card-item>
+          </cdk-virtual-scroll-viewport>
+        </ng-container>
+        <ng-container *ngIf="view === 'tile'">
+            <mg-card-item *ngFor="let row of rows"
+                          class="list__content__card"
+                          [layout]="view"
+                          [item]="row"
+                          [options]="cardItemOptions"
+                          (elementEdited)="onCardItemEdited($event, row)"
+                          (actionClicked)="onCardItemActionClicked($event, row)"
+            ></mg-card-item>
+        </ng-container>
       </ng-container>
       <!-- Data Table version-->
       <fj-table
