--- a/src/midgard/modules/form/form.component.html
+++ b/src/midgard/modules/form/form.component.html
@@ -47,7 +47,7 @@
               [options]="formField.options"
               [customStyles]="{'width': '100%'}"
               [formGroup]="detailsForm"
-              [controlName]="formField.controlName"
+              [formControlName]="formField.controlName"
               [error]="errors[formField.controlName]"
             >
             </fj-native-dropdown>
